[package]
name = "networkd-broker"
version = "1.1.0"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "An event broker daemon for systemd-networkd"
documentation = "https://github.com/bpetlert/networkd-broker"
homepage = "https://github.com/bpetlert/networkd-broker"
license = "GPL-3.0-or-later"
readme = "README.adoc"
repository = "https://github.com/bpetlert/networkd-broker"

edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.79"
async-std = "1.12.0"
clap = { version = "4.4.18", features = ["derive"] }
futures-util = "0.3.30"
libsystemd = "0.7.0"
mimalloc = { version = "0.1.39", features = ["secure"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tracing = { version = "0.1.40", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
], default-features = false }
wait-timeout = "0.2.0"
walkdir = "2.4.0"
zbus = "4.0.0"

[dev-dependencies]
duct = "0.13.7"
sysinfo = "0.30.5"
tempfile = "3.10.0"
