[package]
name = "networkd-broker"
version = "1.1.1"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "An event broker daemon for systemd-networkd"
documentation = "https://github.com/bpetlert/networkd-broker"
homepage = "https://github.com/bpetlert/networkd-broker"
license = "GPL-3.0-or-later"
readme = "README.adoc"
repository = "https://github.com/bpetlert/networkd-broker"

edition = "2021"
publish = false

[dependencies]
anyhow = "~1"
async-std = "~1"
clap = { version = "~4.5", features = ["derive"] }
futures-util = "~0.3"
libsystemd = "~0.7"
mimalloc = { version = "~0.1", features = ["secure"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
tracing = { version = "~0.1", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "~0.3", features = [
    "env-filter",
    "fmt",
], default-features = false }
wait-timeout = "~0.2"
walkdir = "~2.5"
zbus = "~5"

[dev-dependencies]
duct = "~0.13"
sysinfo = "~0.33"
tempfile = "~3"
