[package]
name = "networkd-broker"
version = "1.1.1"
edition = "2024"
description = "An event broker daemon for systemd-networkd"
documentation = "https://github.com/bpetlert/networkd-broker"
readme = "README.adoc"
homepage = "https://github.com/bpetlert/networkd-broker"
repository = "https://github.com/bpetlert/networkd-broker"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
anyhow = "~1"
clap = { version = "~4.5", features = ["derive"] }
futures-util = "~0.3"
libsystemd = "~0.7"
mimalloc = { version = "~0.1", features = ["secure"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
tracing = { version = "~0.1", features = [
  "max_level_debug",
  "release_max_level_debug",
] }
tracing-subscriber = { version = "~0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
wait-timeout = "~0.2"
walkdir = "~2.5"
zbus = "~5"

[dev-dependencies]
duct = "~1"
sysinfo = "~0.37"
tempfile = "~3"
